Footer z-index fixed for desktop

--- a/themes/flexy/source/styles/screen.styl
+++ b/themes/flexy/source/styles/screen.styl
@@ -969,6 +969,7 @@ main
     line-height 2.1em
     color #fff
     background transparent
+    z-index 5
     :not(main) > a
       color lighten($body-color, 20%)
       font-weight 700
